--- a/Version HAML/index2.html
+++ b/Version HAML/index2.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang='es'>
+  <!-- Head -->
   <head>
     <meta charset='utf-8'>
     <title>Jaleo</title>
     <meta content='Página de prueba' name='description'>
     <meta content='José A. Hernández' name='author'>
+    <link href='/favicon.ico' rel='shortcut.ico'>
   </head>
+  <!-- Body -->
   <body>
+    <!-- Skip to content -->
     <a href='#main'>Saltar a contenido</a>
+    <!-- Header -->
     <header>
+      <!-- Navigation -->
       <nav>
         <ul>
           <li>
@@ -30,10 +36,12 @@
       </nav>
     </header>
     <hr>
+    <!-- Hero -->
     <section class='hero'>
       <ul>
         <li>
           <ul>
+            <!-- Film title -->
             <li>
               <h1>Los Vengadores: La Era de Ultrón</h1>
             </li>
