--- a/Version HAML/register2.html
+++ b/Version HAML/register2.html
@@ -38,7 +38,7 @@
         <div class='info'>
           <h1>Regístrate para empezar a ver Los Vengadores: La Era de Ultrón</h1>
           <p>Una vez comiences a ver la película, dispones de 72<abbr title="horas">h.</abbr> para verla cuantas veces, y tantos los dispositivos como quieras.</p>
-          <p>¿Ya estás registrado? <a href="#">Inicia tu sesión</a> ahora.</p></p>
+          <p>¿Ya estás registrado? <a href="#">Inicia tu sesión</a> ahora.</p>
         </div>
         <hr>
         <!-- Div:formulario -->
@@ -118,11 +118,11 @@
             </div>
           </fieldset>
           <!-- mailing checkbox -->
-          <fielset>
+          <fieldset>
             <label for='mailing'>
               <input id='mailing' type='checkbox'>Recibir correos electrónicos ocasionales con noticias y novedades de Jaleo.</input>
             </label>
-          </fielset>
+          </fieldset>
           <!-- submit button -->
           <fieldset>
             <label for='submit'>
@@ -137,87 +137,88 @@
         </div>
       </div>
       <hr>
-      <!-- footer -->
-      <footer></footer>
-      <div>
-        <h2>Página</h2>
-        <ul>
-          <li>
-            <a href='#'>Blog</a>
-          </li>
-          <li>
-            <a href='#'>Prensa</a>
-          </li>
-          <li>
-            <a href='#'>Condiciones de uso</a>
-          </li>
-          <li>
-            <a href='#'>Privacidad</a>
-          </li>
-          <li>
-            <a href='#'>Soporte</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2>Corporativo</h2>
-        <ul>
-          <li>
-            <a href='#'>Nosotros</a>
-          </li>
-          <li>
-            <a href='#'>Contacto</a>
-          </li>
-          <li>
-            <a href='#' hreflang='en'>English site</a>
-          </li>
-          <li>
-            <a href='#' hreflang='de'>Deutsch website</a>
-          </li>
-          <li>
-            <a href='#' hreflang='fr'>Site français</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2>Síguenos</h2>
-        <ul>
-          <li>
-            <a href='#'>
-              <img alt='Facebook' src='#'>Facebook</img>
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img alt='twitter' src='#'>Twitter</img>
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img alt='Pinterest' src='#'>Pinterest</img>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2>
-          <img LT='Logotipo de Jaleo' src='#'>Jaleo</img>
-        </h2>
-        <ul>
-          <li>
-            <a href='#' rel='license'>Jaleo de España S.A.</a>
-          </li>
-          <li>
-            <a href='#'>Calle del rey, 23 28080 Madrid</a>
-          </li>
-          <li>
-            <a href='tel://0034555556585'>0034 555 55 65 85</a>
-          </li>
-          <li>
-            <a href='mailto:info@jaleoapp.es'>info@jaleoapp.es</a>
-          </li>
-        </ul>
-      </div>
     </header>
   </body>
+  <!-- footer -->
+  <footer>
+    <div>
+      <h2>Página</h2>
+      <ul>
+        <li>
+          <a href='#'>Blog</a>
+        </li>
+        <li>
+          <a href='#'>Prensa</a>
+        </li>
+        <li>
+          <a href='#'>Condiciones de uso</a>
+        </li>
+        <li>
+          <a href='#'>Privacidad</a>
+        </li>
+        <li>
+          <a href='#'>Soporte</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2>Corporativo</h2>
+      <ul>
+        <li>
+          <a href='#'>Nosotros</a>
+        </li>
+        <li>
+          <a href='#'>Contacto</a>
+        </li>
+        <li>
+          <a href='#' hreflang='en'>English site</a>
+        </li>
+        <li>
+          <a href='#' hreflang='de'>Deutsch website</a>
+        </li>
+        <li>
+          <a href='#' hreflang='fr'>Site français</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2>Síguenos</h2>
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='Facebook' src='#'>Facebook</img>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='twitter' src='#'>Twitter</img>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='Pinterest' src='#'>Pinterest</img>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2>
+        <img LT='Logotipo de Jaleo' src='#'>Jaleo</img>
+      </h2>
+      <ul>
+        <li>
+          <a href='#' rel='license'>Jaleo de España S.A.</a>
+        </li>
+        <li>
+          <a href='#'>Calle del rey, 23 28080 Madrid</a>
+        </li>
+        <li>
+          <a href='tel://0034555556585'>0034 555 55 65 85</a>
+        </li>
+        <li>
+          <a href='mailto:info@jaleoapp.es'>info@jaleoapp.es</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </html>
