empezando con CSS

--- a/Version HAML/compiled/index.html
+++ b/Version HAML/compiled/index.html
@@ -2,11 +2,12 @@
 <html lang='es'>
   <!-- Head -->
   <head>
+    <link href='css/main.css' rel='stylesheet' type='text/css'>
     <meta charset='utf-8'>
     <title>Jaleo</title>
     <meta content='Página de prueba' name='description'>
     <meta content='José A. Hernández' name='author'>
-    <link href='/favicon.ico' rel='shortcut.ico'>
+    <link href='/favicon.ico' rel='shortcut'>
   </head>
   <!-- Body -->
   <body>
@@ -14,12 +15,13 @@
     <a href='#main'>Saltar a contenido</a>
     <!-- Header -->
     <header>
+      <!-- Logo -->
+      <div class='logo'>
+        <a href='#'>Jaleo</a>
+      </div>
       <!-- Navigation -->
       <nav>
         <ul>
-          <li>
-            <a href='#'>Jaleo</a>
-          </li>
           <li>
             <a href='#'>Películas</a>
           </li>
@@ -586,7 +588,7 @@
       </div>
       <div>
         <h2>
-          <img LT='Logotipo de Jaleo' src='#'>Jaleo</img>
+          <img alt='Logotipo de Jaleo' class='logo' src='#'>Jaleo</img>
         </h2>
         <ul>
           <li>
